# course_sustainableSE

./: .gitignore  Dockerfile  Gemfile  LICENSE  README.md  _config.yml
.github/: PULL_REQUEST_TEMPLATE.md
2022/: index.md  literature_review.md
2023/: index.md  literature_review.md  p2.md
2024/: index.md
2025/: index.md  literature_review.md
2026/: .gitignore  g0-llm-eval.md  index.md  information.md  requirements.txt
_data/: navigation.yml
_includes/: custom-head.html  head.html  header.html  navigation.html  tag.html
_layouts/: blog_post.html  project_page.html  publication.html
_literature_review_2022/: 2016_Maryam_Engineering.md  2020-Birgit-attention.md  2020-davide-need.md  2020-davide-sleep.md  2020_Evgeni_Designing.md  2021-johnson-Work-Environment.md  2021_Amanda_Weekends.md  2021_Gerosa_Motivation.md  2022_Bjarnason_Interteam-communication.md  2022_Evgeni_Designing.md
_literature_review_2023/: 2011-Catherine-Social.md  2015-Nils-Equality.md  2016-maryam_requirements.md  2016_mika_mining.md  2020-Angel-Ethics.md  2020-Claudia-EngineeringGender.md  2020-Ehsan-HCXAI.md  2020-Gender-Claudia.md  2020_Gender_Claudia.md  2021-author-keyword copy.md  2023-Catherine-Social.md  2023_Claudia_Gender.md  2023_Daniel_unhappy.md  2023_cathrine_approaches.md  2023_maryam_requirements.md
_plugins/: feed_generator_override.rb
assets/: custom.css
browser_bench/: README.md  chrome_experiment_results.csv  firefox_experiment_results.csv  main.py  pyenergibridge_config.json  pyproject.toml
docs/: _config.yml  index.md
g22_code/: README.md
src/: README.md  (+7 more)
(+1192 files in other folders)
